{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 506,
  "lineage": "97676a7f-98bc-778d-c234-aa31b52551f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:vpc/vpc-0cfbb515347532a49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-04a53980bba3f9580",
            "default_route_table_id": "rtb-0e70fb6669b3cefbf",
            "default_security_group_id": "sg-01c55e252667de38a",
            "dhcp_options_id": "dopt-08afd5376a36b3bd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cfbb515347532a49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e70fb6669b3cefbf",
            "owner_id": "478332897299"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:vpc/vpc-070164d1aa3035ec9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ef430950e05ccedd",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08afd5376a36b3bd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070164d1aa3035ec9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0abcb347255d99530",
            "owner_id": "478332897299",
            "tags": {
              "Name": "us-east-1-main_vpc",
              "Owner": "awst",
              "Usage": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf10cdf9fcd62d37",
            "arn": "arn:aws:ec2:us-east-1:478332897299:instance/i-0f493defb84d5d009",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf83b20c8dc338cb",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f493defb84d5d009",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0648e56fe4bf00305",
            "private_dns": "ip-10-0-203-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.203.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a83b7c43d8e45f40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033c9a6ca1b8772c7",
            "tags": {
              "Usage": "EC2"
            },
            "tags_all": {
              "Usage": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e36f2fd246d1fee0"
            ]
          },
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.ec2.aws_security_group.endpoint_sg",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ami.amazon_linux_2024_x86_64",
            "module.ec2.data.aws_subnets.private_subnets",
            "module.ec2.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:security-group/sg-0da4c766e6652ccfb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0da4c766e6652ccfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-070164d1aa3035ec9-connect-endpoint-sg",
            "name_prefix": "",
            "owner_id": "478332897299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Usage": "EC2"
            },
            "tags_all": {
              "Usage": "EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:security-group/sg-0e36f2fd246d1fee0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e36f2fd246d1fee0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da4c766e6652ccfb"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-070164d1aa3035ec9-allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "478332897299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Usage": "EC2"
            },
            "tags_all": {
              "Usage": "EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.ec2.aws_security_group.endpoint_sg",
            "module.ec2.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:vpc/vpc-070164d1aa3035ec9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ef430950e05ccedd",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08afd5376a36b3bd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070164d1aa3035ec9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0abcb347255d99530",
            "owner_id": "478332897299",
            "tags": {
              "Name": "us-east-1-main_vpc",
              "Owner": "awst",
              "Usage": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "access_in_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:security-group/sg-02c310178ec34cbe9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02c310178ec34cbe9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-fs-00b5fbac4479cb78f-sg",
            "name_prefix": "",
            "owner_id": "478332897299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Usage": "EFS"
            },
            "tags_all": {
              "Usage": "EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.efs.aws_efs_file_system.this",
            "module.efs.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:internet-gateway/igw-0c08fed283e966f69",
            "id": "igw-0c08fed283e966f69",
            "owner_id": "478332897299",
            "tags": {
              "Name": "us-east-1-main_vpc-igw",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-igw",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:network-acl/acl-08bef9703f7902a5a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08bef9703f7902a5a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "478332897299",
            "subnet_ids": [
              "subnet-00ccd1ff4c56db021",
              "subnet-033c9a6ca1b8772c7",
              "subnet-045f165d4c45a1673",
              "subnet-0bd9a673dd6b7b607",
              "subnet-0e6b5dba395d26015",
              "subnet-0ffd37fbc7339a050"
            ],
            "tags": {
              "Name": "us-east-1-main_vpc-default-nacl",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-default-nacl",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "acl_association_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-063f0c44d98921ed8",
            "network_acl_id": "acl-08bef9703f7902a5a",
            "subnet_id": "subnet-0ffd37fbc7339a050"
          },
          "dependencies": [
            "module.main_vpc.aws_network_acl.this_nacl",
            "module.main_vpc.aws_subnet.private_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-000e07a2370a09842",
            "network_acl_id": "acl-08bef9703f7902a5a",
            "subnet_id": "subnet-00ccd1ff4c56db021"
          },
          "dependencies": [
            "module.main_vpc.aws_network_acl.this_nacl",
            "module.main_vpc.aws_subnet.private_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0666ce8d1f6590ba5",
            "network_acl_id": "acl-08bef9703f7902a5a",
            "subnet_id": "subnet-033c9a6ca1b8772c7"
          },
          "dependencies": [
            "module.main_vpc.aws_network_acl.this_nacl",
            "module.main_vpc.aws_subnet.private_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "acl_association_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c7b8f6e46d1db28e",
            "network_acl_id": "acl-08bef9703f7902a5a",
            "subnet_id": "subnet-0e6b5dba395d26015"
          },
          "dependencies": [
            "module.main_vpc.aws_network_acl.this_nacl",
            "module.main_vpc.aws_subnet.public_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04aaec9206a2213bb",
            "network_acl_id": "acl-08bef9703f7902a5a",
            "subnet_id": "subnet-045f165d4c45a1673"
          },
          "dependencies": [
            "module.main_vpc.aws_network_acl.this_nacl",
            "module.main_vpc.aws_subnet.public_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08c759ec909eb3b50",
            "network_acl_id": "acl-08bef9703f7902a5a",
            "subnet_id": "subnet-0bd9a673dd6b7b607"
          },
          "dependencies": [
            "module.main_vpc.aws_network_acl.this_nacl",
            "module.main_vpc.aws_subnet.public_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:route-table/rtb-0b8d066542bf74f90",
            "id": "rtb-0b8d066542bf74f90",
            "owner_id": "478332897299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-main_vpc-default-routetable",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-default-routetable",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:route-table/rtb-09283e17348c7df85",
            "id": "rtb-09283e17348c7df85",
            "owner_id": "478332897299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c08fed283e966f69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-main_vpc-igw-routetable",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-igw-routetable",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_internet_gateway.internet_gateway",
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04801ea61abb2efe2",
            "route_table_id": "rtb-09283e17348c7df85",
            "subnet_id": "subnet-0e6b5dba395d26015"
          },
          "dependencies": [
            "module.main_vpc.aws_internet_gateway.internet_gateway",
            "module.main_vpc.aws_route_table.igw_route_table",
            "module.main_vpc.aws_subnet.public_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0039207c6f2d37c2b",
            "route_table_id": "rtb-09283e17348c7df85",
            "subnet_id": "subnet-045f165d4c45a1673"
          },
          "dependencies": [
            "module.main_vpc.aws_internet_gateway.internet_gateway",
            "module.main_vpc.aws_route_table.igw_route_table",
            "module.main_vpc.aws_subnet.public_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a2266bd3178fc8",
            "route_table_id": "rtb-09283e17348c7df85",
            "subnet_id": "subnet-0bd9a673dd6b7b607"
          },
          "dependencies": [
            "module.main_vpc.aws_internet_gateway.internet_gateway",
            "module.main_vpc.aws_route_table.igw_route_table",
            "module.main_vpc.aws_subnet.public_subnets",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:security-group/sg-06b130e9f538d8069",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b130e9f538d8069",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "us-east-1-main_vpc-sg",
            "name_prefix": "",
            "owner_id": "478332897299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-main_vpc-sg",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-sg",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Usage": "VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:subnet/subnet-0ffd37fbc7339a050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffd37fbc7339a050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478332897299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main_vpc-subnet0",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Private",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-subnet0",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Private",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:subnet/subnet-00ccd1ff4c56db021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ccd1ff4c56db021",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478332897299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main_vpc-subnet1",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Private",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-subnet1",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Private",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:subnet/subnet-033c9a6ca1b8772c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033c9a6ca1b8772c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478332897299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main_vpc-subnet2",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Private",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-subnet2",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Private",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:subnet/subnet-0e6b5dba395d26015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6b5dba395d26015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478332897299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main_vpc-public-subnet0",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Public",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-public-subnet0",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Public",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:subnet/subnet-045f165d4c45a1673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045f165d4c45a1673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478332897299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main_vpc-public-subnet1",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Public",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-public-subnet1",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Public",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:subnet/subnet-0bd9a673dd6b7b607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd9a673dd6b7b607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478332897299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main_vpc-public-subnet2",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Public",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc-public-subnet2",
              "Owner": "awst",
              "OwnerVpc": "us-east-1-main_vpc",
              "Tier": "Public",
              "Usage": "VPC"
            },
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:vpc/vpc-070164d1aa3035ec9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d71f6cce01cc5602",
            "default_route_table_id": "rtb-0abcb347255d99530",
            "default_security_group_id": "sg-0f50773d3625d5dac",
            "dhcp_options_id": "dopt-08afd5376a36b3bd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070164d1aa3035ec9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abcb347255d99530",
            "owner_id": "478332897299",
            "tags": {
              "Name": "us-east-1-main_vpc",
              "Owner": "awst",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-main_vpc",
              "Owner": "awst",
              "Usage": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.mysql_single",
      "mode": "data",
      "type": "aws_vpc",
      "name": "target_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:vpc/vpc-070164d1aa3035ec9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ef430950e05ccedd",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08afd5376a36b3bd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070164d1aa3035ec9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0abcb347255d99530",
            "owner_id": "478332897299",
            "tags": {
              "Name": "us-east-1-main_vpc",
              "Owner": "awst",
              "Usage": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.mysql_single",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:security-group/sg-03571a139951f4837",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03571a139951f4837",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "us-east-1-mysql368b4d36d6520da5-sg",
            "name_prefix": "",
            "owner_id": "478332897299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-mysql368b4d36d6520da5-sg",
              "OwnerVpc": "vpc-070164d1aa3035ec9",
              "Usage": "VPC"
            },
            "tags_all": {
              "Name": "us-east-1-mysql368b4d36d6520da5-sg",
              "OwnerVpc": "vpc-070164d1aa3035ec9",
              "Usage": "VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.mysql_single.data.aws_vpc.target_vpc",
            "module.mysql_single.random_id.db_instance_id"
          ]
        }
      ]
    },
    {
      "module": "module.private-nlb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:vpc/vpc-070164d1aa3035ec9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ef430950e05ccedd",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08afd5376a36b3bd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070164d1aa3035ec9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0abcb347255d99530",
            "owner_id": "478332897299",
            "tags": {
              "Name": "us-east-1-main_vpc",
              "Owner": "awst",
              "Usage": "VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.private-nlb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:478332897299:targetgroup/test-private-nlb-target-group/a537406a43c722ba",
            "arn_suffix": "targetgroup/test-private-nlb-target-group/a537406a43c722ba",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:478332897299:targetgroup/test-private-nlb-target-group/a537406a43c722ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-private-nlb-target-group",
            "port": 8088,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Usage": "ELB"
            },
            "tags_all": {
              "Usage": "ELB"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.private-nlb.aws_lb.this",
            "module.private-nlb.aws_security_group.this",
            "module.private-nlb.data.aws_subnets.public_subnets",
            "module.private-nlb.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.private-nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:478332897299:loadbalancer/net/test-private-nlb/0322a5d39bafd2c2",
            "arn_suffix": "net/test-private-nlb/0322a5d39bafd2c2",
            "dns_name": "test-private-nlb-0322a5d39bafd2c2.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:478332897299:loadbalancer/net/test-private-nlb/0322a5d39bafd2c2",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-private-nlb",
            "security_groups": [
              "sg-06115fa84ed00d1a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045f165d4c45a1673"
              },
              {
                "subnet_id": "subnet-0bd9a673dd6b7b607"
              },
              {
                "subnet_id": "subnet-0e6b5dba395d26015"
              }
            ],
            "subnets": [
              "subnet-045f165d4c45a1673",
              "subnet-0bd9a673dd6b7b607",
              "subnet-0e6b5dba395d26015"
            ],
            "tags": {
              "Name": "vpc-070164d1aa3035ec9-test-private-nlb",
              "Usage": "ELB"
            },
            "tags_all": {
              "Name": "vpc-070164d1aa3035ec9-test-private-nlb",
              "Usage": "ELB"
            },
            "vpc_id": "vpc-070164d1aa3035ec9",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.private-nlb.aws_security_group.this",
            "module.private-nlb.data.aws_subnets.public_subnets",
            "module.private-nlb.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.private-nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:478332897299:listener/net/test-private-nlb/0322a5d39bafd2c2/a3c5c9b50529e62c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:478332897299:targetgroup/test-private-nlb-target-group/a537406a43c722ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:478332897299:listener/net/test-private-nlb/0322a5d39bafd2c2/a3c5c9b50529e62c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:478332897299:loadbalancer/net/test-private-nlb/0322a5d39bafd2c2",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Usage": "ELB"
            },
            "tags_all": {
              "Usage": "ELB"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.private-nlb.aws_alb_target_group.default",
            "module.private-nlb.aws_lb.this",
            "module.private-nlb.aws_security_group.this",
            "module.private-nlb.data.aws_subnets.public_subnets",
            "module.private-nlb.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.private-nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "i-0f493defb84d5d009",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:478332897299:targetgroup/test-private-nlb-target-group/a537406a43c722ba-20240229095026717500000001",
            "port": 8088,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:478332897299:targetgroup/test-private-nlb-target-group/a537406a43c722ba",
            "target_id": "i-0f493defb84d5d009"
          },
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.private-nlb.aws_alb_target_group.default",
            "module.private-nlb.aws_lb.this",
            "module.private-nlb.aws_security_group.this",
            "module.private-nlb.data.aws_instances.lb_targets",
            "module.private-nlb.data.aws_subnets.public_subnets",
            "module.private-nlb.data.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.private-nlb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478332897299:security-group/sg-06115fa84ed00d1a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8999
              }
            ],
            "id": "sg-06115fa84ed00d1a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-private-nlb-sg",
            "name_prefix": "",
            "owner_id": "478332897299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Usage": "ELB"
            },
            "tags_all": {
              "Usage": "ELB"
            },
            "timeouts": null,
            "vpc_id": "vpc-070164d1aa3035ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.main_vpc",
            "module.private-nlb.data.aws_vpc.target"
          ]
        }
      ]
    }
  ]
}